cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stc
  namespace: stc
spec:
  replicas: 2
  selector:
    matchLabels:
      run: stc
  minReadySeconds: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0%  # the maximum allowed existing pods that may be disabled at any time during an update
      maxSurge: 34% # the maximum allowed replicas that can run above the desired number during an update
  template:
    metadata:
      labels:
        run: stc
    spec:
      containers:
      - name: stc
        image: kenellorando/stc:latest
        ports:
        - containerPort: 80
