cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stc
  namespace: stc
spec:
  rules:
  - host: stc.cadenceradio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stc
            port:
              number: 80
  ingressClassName: nginx
